--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+# inspired from
+# http://stackoverflow.com/questions/9321153/rails-database-setup-on-travis-ci
 branches:
   only:
     - 'master'
@@ -6,4 +8,16 @@ language: ruby
 rvm:
   - 1.9.3
 
-script: "bundle exec rspec spec"
+#script: "bundle exec rspec spec"
+env:
+  - DB=sqlite
+  - DB=mysql
+  - DB=postgresql
+script:
+  - RAILS_ENV=test bundle exec rake db:migrate --trace
+  - bundle exec rake db:test:prepare
+  - bundle exec rake
+before_script:
+  - cp config/database.travis.yml config/database.yml
+  - mysql -e 'create database strano_test'
+  - psql -c 'create database strano_test' -U postgres
