--- a/config/database.yml
+++ b/config/database.yml
@@ -19,11 +19,15 @@ test:
   timeout: 5000
 
 production:
-  adapter: mysql2
-  encoding: utf8
-  reconnect: false
-  database: openvoc
-  username: openvoc
-  password: HnTm9SNipKOk
-  #host: localhost
-  shost: localhost
+  adapter: sqlite3
+  database: db/production.sqlite3
+  pool: 5
+  timeout: 5000
+# adapter: mysql2
+# encoding: utf8
+# reconnect: false
+# database: openvoc
+# username: openvoc
+# password: HnTm9SNipKOk
+# #host: localhost
+# shost: localhost
