--- a/config/database.yml
+++ b/config/database.yml
@@ -19,11 +19,9 @@ test:
   timeout: 5000
 
 production:
-  adapter: mysql2
-  encoding: utf8
-  reconnect: false
-  database: openvoc
-  username: openvoc
-  password: HnTm9SNipKOk
-  #host: localhost
-  shost: localhost
+  adapter: postgresql
+  encoding: unicode
+  database: myrefero
+  pool: 5
+  username: myrefero
+  password: trololo
